--- a/expenseTracker/Views/Shared/_Layout.cshtml
+++ b/expenseTracker/Views/Shared/_Layout.cshtml
@@ -22,6 +22,10 @@
 
                     <li class="nav-item"><a class="nav-link" asp-controller="Expenses" asp-action="Index">Expenses</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Categories" asp-action="Index">Categories</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" asp-controller="Expenses" asp-action="History">History</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
@@ -29,10 +33,11 @@
 
     <div>
         @RenderBody()
+        @await RenderSectionAsync("Scripts", required: false)
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+ 
 
 </body>
 </html>
