--- a/expenseTracker/Views/Shared/_Layout.cshtml
+++ b/expenseTracker/Views/Shared/_Layout.cshtml
@@ -25,6 +25,10 @@
                     <li class="nav-item">
                         <a class="nav-link text-light" asp-controller="Expenses" asp-action="History">History</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Register" asp-action="Index">Register</a>
+                    </li>
+
 
                 </ul>
             </div>
