--- a/expenseTracker/Views/Shared/_Layout.cshtml
+++ b/expenseTracker/Views/Shared/_Layout.cshtml
@@ -19,17 +19,32 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Home" asp-action="Index">Dashboard</a>
                     </li>
-
-                    <li class="nav-item"><a class="nav-link" asp-controller="Expenses" asp-action="Index">Expenses</a></li>
-                    <li class="nav-item"><a class="nav-link" asp-controller="Categories" asp-action="Index">Categories</a></li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" asp-controller="Expenses" asp-action="History">History</a>
+                        <a class="nav-link" asp-controller="Expenses" asp-action="Index">Expenses</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Register" asp-action="Index">Register</a>
+                        <a class="nav-link" asp-controller="Categories" asp-action="Index">Categories</a>
                     </li>
-
-
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Expenses" asp-action="History">History</a>
+                    </li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="nav-item">
+                            <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
+                                <button type="submit" class="btn btn-link nav-link" style="display:inline; padding:0;">Logout</button>
+                            </form>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Account" asp-action="Login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Register" asp-action="Index">Register</a>
+                        </li>
+                    }
                 </ul>
             </div>
         </div>
@@ -41,7 +56,5 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
- 
-
 </body>
 </html>
