--- a/expenseTracker/Views/Expenses/History.cshtml
+++ b/expenseTracker/Views/Expenses/History.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Expense History";
 }
 
+<div class="m-5">
 <h2>@ViewData["Title"]</h2>
 
 <table class="table">
@@ -33,3 +34,4 @@
         }
     </tbody>
 </table>
+</div>
