--- a/expenseTracker/Views/Account/Login.cshtml
+++ b/expenseTracker/Views/Account/Login.cshtml
@@ -2,23 +2,26 @@
     ViewData["Title"] = "Login";
 }
 
+<div class="m-5">
 <h2>Login</h2>
 
 @* This displays the error message(s) if login fails *@
 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 <form asp-action="Login" method="post">
-    <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" name="email" class="form-control" required />
-    </div>
-    <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" name="password" class="form-control" required />
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+        <div class="mb-3 w-50">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" name="email" class="form-control" required />
+        </div>
+        <div class="mb-3 w-50">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" name="password" class="form-control" required />
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
 </form>
 
 <p>
     Don't have an account? <a asp-controller="Register" asp-action="Index">Register here</a>
 </p>
+
+</div>
