--- a/expenseTracker/Views/Expenses/Index.cshtml
+++ b/expenseTracker/Views/Expenses/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Expenses";
 }
 
-<div class="container py-4">
+<div class="container py-4 m-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2>Your Expenses</h2>
         <a class="btn btn-primary" asp-action="Create">+ Add Expense</a>
