--- a/expenseTracker/Views/Home/Index.cshtml
+++ b/expenseTracker/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Dashboard";
 }
 
-<div class="container py-4">
+<div class="container py-4 m-5">
 
 
     <div class="row">
