--- a/expenseTracker/Views/Register/Index.cshtml
+++ b/expenseTracker/Views/Register/Index.cshtml
@@ -4,31 +4,32 @@
     ViewData["Title"] = "Register";
 }
 
+<div class="m-5">
 <h2>Register</h2>
 
 @* Displays all error messages from ModelState *@
 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 <form asp-action="Index" method="post">
-    <div class="mb-3">
+    <div class="mb-3 w-50">
         <label asp-for="FullName" class="form-label"></label>
         <input asp-for="FullName" class="form-control" />
         <span asp-validation-for="FullName" class="text-danger"></span>
     </div>
 
-    <div class="mb-3">
+    <div class="mb-3 w-50">
         <label asp-for="Email" class="form-label"></label>
         <input asp-for="Email" class="form-control" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
 
-    <div class="mb-3">
+    <div class="mb-3 w-50">
         <label asp-for="Password" class="form-label"></label>
         <input asp-for="Password" class="form-control" type="password" />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
 
-    <div class="mb-3">
+    <div class="mb-3 w-50">
         <label asp-for="ConfirmPassword" class="form-label"></label>
         <input asp-for="ConfirmPassword" class="form-control" type="password" />
         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
@@ -40,3 +41,4 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+</div>
