--- a/expenseTracker/Views/Register/RegistrationConfirmation.cshtml
+++ b/expenseTracker/Views/Register/RegistrationConfirmation.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = "Registration Successful";
 }
 
+<div class="m-5">
 <h2>Registration Successful!</h2>
 <p>
     Thank you for registering. Please <a asp-controller="Account" asp-action="Login">login</a> to continue.
 </p>
+</div>
